Updated AboutMe page component; cleaned up unused files; added download button to Resume page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="shortcut icon"
       type="image/jpg"
-      href="./src/assets/images/favicon.ico"
+      href="/public/images/favicon.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tom Burzynski</title>
